overlays/minikube/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
spec:
  selector:
    label: postgres-pod
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deploy
spec:
  selector:
    matchLabels:
      label: postgres-pod
  template:
    metadata:
      labels:
        label: postgres-pod
    spec:
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
      containers:
        - name: postgres-container
          image: postgres:16
          volumeMounts:
            - mountPath: /var/lib/postgresql/data # PGDATA
              name: postgres-persistent-storage
          env: # Environment variables
            - name: POSTGRES_USER
              value: "superuser"
            - name: POSTGRES_PASSWORD
              value: "password"
            - name: POSTGRES_DB
              value: "database"
            # Below is used by psql
            - name: PGUSER
              value: "superuser"
            - name: PGDATABASE
              value: "database"
            - name: PGPORT
              value: "5432"
          ports:
            - containerPort: 5432 # Expose the container on port 5432
          resources:
            requests:
              cpu: "50m"
              memory: "52Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
